
[TestExportView_View/view_exports - 1]
TestExportView_View/view_exports
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExportView",
      "Data": {
        "Type": "ExportView",
        "Handle": "test-ws",
        "HasCopyResult": false,
        "CopyResult": ""
      }
    }
  ]
}
---

[TestExportView_View/copy_to_clipboard - 1]
TestExportView_View/copy_to_clipboard
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExportView",
      "Data": {
        "Type": "ExportView",
        "Handle": "test-ws",
        "HasCopyResult": true,
        "CopyResult": "Copied to clipboard!"
      }
    }
  ]
}
---

[TestExportView_View/copy_failure - 1]
TestExportView_View/copy_failure
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExportView",
      "Data": {
        "Type": "ExportView",
        "Handle": "test-ws",
        "ItemCount": 2,
        "SelectedIdx": 0,
        "HasCopyResult": false,
        "CopyResult": ""
      }
    },
    {
      "Type": "*views.PathInputView",
      "Data": {
        "Type": "PathInputView",
        "Value": ""
      }
    }
  ]
}
---

[TestExportView_View/save_to_file - 1]
TestExportView_View/save_to_file
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExportView",
      "Data": {
        "Type": "ExportView",
        "Handle": "test-ws",
        "HasCopyResult": false,
        "CopyResult": ""
      }
    }
  ]
}
---

[TestExportView_View/back_navigation - 1]
TestExportView_View/back_navigation
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    }
  ]
}
---
